[package]
name = "async-drop"
version = "0.1.1"
edition = "2024"
authors = ["fpena2 <fpena2@unh.newhaven.edu>"]
repository = "https://github.com/fpena2/async-drop"
description = "simple async drop"
readme = "README.md"
keywords = ["drop", "async"]
categories = ["asynchronous"]
license = "MIT"

[dependencies]
# Async 
futures = "0.3.32"
tokio = { version = "1.47.1", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
] }
